--- a/assets/css/responsible.css
+++ b/assets/css/responsible.css
@@ -40,7 +40,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 5rem;
+    height: auto;
     padding: 0rem 1rem;
   }
 
@@ -74,6 +74,7 @@
     width: 100%;
     border-top-left-radius: 0rem;
     border-top-right-radius: 0rem;
+    margin-top: 0rem;
   }
 
   .container_child_one_title h2 {
